--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,17 @@ body.victory {
     background: darkslategray;
 }
 
-body::before {
+.description {
     font-size: 17px;
-    content: 'Put the cat on the synthesizer. Hold SPACE for more fun';
-    margin: 7px;
+    margin: 11px;
     display: block;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 #sky {
-    font-size: 6px;
+    font-size: 7px;
     position: absolute;
     color: darkslategray;
     pointer-events: none;
@@ -33,12 +35,13 @@ body::before {
 }
 
 #score {
-    font-size: 42px;
+    font-size: 21px;
     position: absolute;
     top: 0;
     right: 0;
     pointer-events: none;
     margin: 7px 21px;
+    text-align: right;
 }
 
 #cat {
@@ -47,6 +50,12 @@ body::before {
 
 #synth {
     font-size: 42px;
+}
+
+#space-key {
+    color: yellow;
+    border: 1px solid yellow;
+    padding: 7px 21px;
 }
 
 .start-position, .start-position-2 {
@@ -66,8 +75,13 @@ body::before {
     white-space: nowrap;
 }
 
-.animated {
+#cat.animated, body.global-space-animation #cat {
     animation: rotation 1s infinite forwards linear;
+}
+
+body.global-space-animation #space-key {
+    color: white;
+    border-color: white;
 }
 
 @keyframes rotation {
@@ -76,5 +90,11 @@ body::before {
     }
     to {
         transform: translate(-50%, -50%) rotate(-359deg);
+    }
+}
+
+@media screen and (hover: hover) {
+    #space-key {
+        display: none;
     }
 }
