--- a/src/index.css
+++ b/src/index.css
@@ -73,24 +73,14 @@ canvas {
   top: 0;
   right: 0;
   pointer-events: none;
-  margin: 7px 21px;
-  text-align: right;
-}
-
-#space-key {
-  color: yellow;
-  border: 1px solid yellow;
   padding: 7px 21px;
-  position: absolute;
-  font-size: 23px;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  text-align: right;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (hover: hover) {
-  #space-key {
-    display: none;
-  }
+body.gameStarted #score {
+  opacity: 0.5;
+  z-index: 0;
+  background: none;
 }
