Improve level configurator

--- a/src/game/configScreen/configScreen.scss
+++ b/src/game/configScreen/configScreen.scss
@@ -31,3 +31,13 @@ textarea {
   padding: 13px;
   margin: 37px;
 }
+
+input {
+  display: inline-block;
+  background: black;
+  color: white;
+  font-size: 37px;
+  padding: 7px;
+  margin-bottom: 37px;
+  margin-left: 13px;
+}
