--- a/src/game/hints/hints.scss
+++ b/src/game/hints/hints.scss
@@ -1,3 +1,5 @@
+@import "../../animations";
+
 .hints {
   font-size: 37px;
   display: block;
@@ -34,17 +36,5 @@ body:not(.started) {
 .click-mode {
   .expert-hint {
     display: none;
-  }
-}
-
-@keyframes pulse {
-  0% {
-    opacity: 1;
-  }
-  60% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
   }
 }
