--- a/src/game/screenControls/screenControls.scss
+++ b/src/game/screenControls/screenControls.scss
@@ -18,6 +18,7 @@
 
     .space, .enter {
       color: gold;
+      background-color: rgba(white, 0.2);
       border: 1px solid gold;
       padding: 7px 37px;
       font-size: 37px;
@@ -27,6 +28,7 @@
 
     .enter {
       color: white;
+      background-color: rgba(white, 0.2);
       border-color: white;
       font-size: 26px;
     }
